# dirplayer

./: Cargo.toml  LICENSE.md  README.md  launch.json
src/: Data.rs  app.rs  backend_mpv.rs  backend_rodio.rs  backend_trait.rs  constants.rs  directories.rs  directory.rs  directory_selector.rs  directory_watcher.rs  echo_area.rs  files.rs  main.rs  ui.rs  zone.rs
src/config/: config.json
src/handlers/: app.rs  selector.rs
src/util/: event.rs  mod.rs
src/utils/: config.rs  directory.rs  macros.rs  mod.rs  style.rs
