[package]
name = "dirplayer"
version = "0.1.0"
authors = ["Yann Bonnemay <y.bonnemay@gmail.com>"]

[dependencies]
argh = "*"
crossbeam = "*"
crossbeam-channel = "0.3.8"
crossterm = "*"
notify = "=5.0.0-pre.1"
rand = "*"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "*"
serde_json = "*"
tui =  { version = "0.9", default-features = false, features = ['crossterm'] }
walkdir = "2"
